fix: z-index for modals

--- a/src/components/DeleteTask/DeleteTask.css
+++ b/src/components/DeleteTask/DeleteTask.css
@@ -4,6 +4,7 @@
     min-width: 200px;
     box-sizing: border-box;
     color: black;
+    z-index: 2;
 }
 
 .delete-task header{
