--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -43,4 +43,5 @@
     margin: 10px 0;
     cursor: pointer;
     text-align: end;
+    z-index: 2;
 }
